fixed img to stretch

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@ body, html {
 
 .imgflex1 {
   position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .middle {
@@ -53,7 +55,5 @@ p {
   p {
     padding: 2rem;
   }
-
-
 
 }
